[package]
name = "rust-azul-example"
version = "0.1.0"
authors = ["yuu <yuuxzy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# azul = { git = "https://github.com/maps4print/azul" }
azul = { git = "https://github.com/dignifiedquire/azul.git" }
